fix: overflow wrap because text would not wrap around body and cause x axis overflow

--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -22,6 +22,7 @@ html {
       max-width: 1680px;
       height: 100%;
       margin: 0 auto;
+      overflow-wrap: break-word;
 
       .section {
         padding: 3rem;
